Header z-index fix

--- a/angular/core/css/1_base.scss
+++ b/angular/core/css/1_base.scss
@@ -6,7 +6,7 @@ body {
 
 header {
   min-height: $navbar-height;
-  z-index: $z-high;
+  z-index: 70;
 }
 
 h1, h2, h3, h4 {
